--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - checkout
       - run:
           name: Installing the dependencies
-          commands: |
+          command: |
             sudo apt-get -y -qq update
             sudo apt install python3.8
             sudo apt install python3-pip
