--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,9 @@ jobs:
             sudo ./aws/install
       - aws-cli/setup:
           profile-name: sac
-          aws-access-key-id: $AWS_ACCESS_KEY_ID
-          aws-region: $AWS_REGION
-          aws-secret-access-key: $AWS_SECRET_ACCESS_KEY
+          aws-access-key-id: ${AWS_ACCESS_KEY_ID}
+          aws-region: ${AWS_REGION}
+          aws-secret-access-key: ${AWS_SECRET_ACCESS_KEY}
       - run:
           name: Installing the Node manager
           command: npm install aws-cdk@1.115.0
