--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,11 +25,11 @@ jobs:
           name: Installing the dependencies
           command: |
             apt-get -y -qq update
-            sudo apt install python3.8-venv
-            sudo apt install python3-pip
+            apt install python3.8-venv
+            apt install python3-pip
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
-            sudo ./aws/install
+            ./aws/install
       - aws-cli/setup:
           profile-name: sac
           aws-access-key-id: AWS_ACCESS_KEY_ID
