--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
           name: Installing the Node manager
           command: |
             npm install aws-cdk@1.115.0
+            which cdk
             cdk --version
       - run:
           name: installing the requirements.
