--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,8 @@ jobs:
           name: Installing the Node manager
           command: |
             npm install aws-cdk@1.115.0
-            cdk --version
+            npm --version
+# cdk --version
       - run:
           name: installing the requirements.
           command: |
