--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
           name: Installing the dependencies
           command: |
             apt-get -y -qq update
-            apt install python3.8-venv -y
-            apt install python3-pip -y
+            apt-get install python3-venv -y
+            apt-get install python3-pip -y
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             ./aws/install
