--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,9 +47,10 @@ jobs:
             python3 -m venv .venv
             source .venv/bin/activate
             pip install -r requirements.txt
-      - run:
-          name: List the stack
-          command: cdk ls --profile sac
+            cdk ls --profile sac
+#       - run:
+#           name: List the stack
+#           command: cdk ls --profile sac
 
 
 
