--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
             python3 -m venv .venv
             source .venv/bin/activate
             pip install -r requirements.txt
-            cdk ls --profile sac
+            which aws-cdk 
 #       - run:
 #           name: List the stack
 #           command: cdk ls --profile sac
