--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
             python3 -m venv .venv
             source .venv/bin/activate
             pip install -r requirements.txt
-            ls -l /usr/bin/python
+            ls -l /usr/bin/cdk
             echo "export PATH=/usr/local/bin/cdk" >> ~/.bashrc
             which cdk
             cdk ls --profile sac
