--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,13 +49,9 @@ jobs:
             python3 -m venv .venv
             source .venv/bin/activate
             pip install -r requirements.txt
-#           ls -l /usr/bin/cdk
-#           echo "export PATH=/usr/local/bin/cdk" >> ~/.bashrc
-#           which cdk
-#           cdk ls --profile sac
-#       - run:
-#           name: List the stack
-#           command: cdk ls --profile sac
+      - run:
+          name: List the stack
+          command: cdk ls --profile sac
 #       - cdk/cdk:
 #           command: cdk synth 
 #           cdk_params: --profile sac
