--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,12 +44,14 @@ jobs:
             cdk --version
 # cdk --version
       - run:
-          name: installing the requirements.
+          name: installing the requirements and synthesizing into CFN templates.
           command: |
             python3 -m venv .venv
             source .venv/bin/activate
             pip install -r requirements.txt
             cdk ls --profile sac
+            cdk synth --profile sac
+            
 #       - run:
 #           name: List the stack
 #           command: cdk ls --profile sac
