--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,7 @@ jobs:
             python3 -m venv .venv
             source .venv/bin/activate
             pip install -r requirements.txt
+            sed -i 's/env_lower.yaml/env_upper.yaml/g' app.py
             cdk ls --profile sac
             cdk synth --profile sac
             
