--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,8 +50,9 @@ jobs:
             source .venv/bin/activate
             pip install -r requirements.txt
             sed -i 's/env_lower.yaml/env_upper.yaml/g' app.py
-            cdk ls --profile sac
-            cdk synth --profile sac
+            cat app.py
+#           cdk ls --profile sac
+#           cdk synth --profile sac
             
 #       - run:
 #           name: List the stack
