--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,8 +59,9 @@ jobs:
             cdk synth --profile sac
 
 
-  upper:
-    docker:
-      - image: cimg/node:12.0
-
+  upper: 
+    docker:     
+      - image: cimg/node:12.0    
+    steps:     
+      - run: echo "hello world" 
 
