--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ workflows:
           filters:
             branches:
               only:
-                - circle-project-setup
+                - circleci-project-setup
 
 
 jobs:
