--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,13 +24,13 @@ jobs:
     steps:
       - checkout
       - run: node --version
-      - run:
-          name: Installing the dependencies
-          command: |
-            sudo apt-get -y -qq update
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
+#       - run:
+#           name: Installing the dependencies
+#           command: |
+#             sudo apt-get -y -qq update
+#             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+#             unzip awscliv2.zip
+#             sudo ./aws/install
       - aws-cli/setup:
           profile-name: sac
       - run:
