--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,9 @@ jobs:
             sudo npm install -g aws-cdk@1.115.0
       - run:
           name: installing the requirements.
-          command: |
-            python3 -m venv .venv
-            source .venv/bin/activate
+          command: source .venv/bin/activate
+#           python3 -m venv .venv
+            
       - python/install-packages:
           pip-dependency-file: requirements.txt
           pkg-manager: pip
