--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,9 @@ jobs:
       - run:
           name: installing the requirements.
           command: |
-            python3 -m venv .venv
-            source .venv/bin/activate
-            pip install -r requirements.txt
+            sudo python3 -m venv .venv
+            sudo source .venv/bin/activate
+            sudo pip install -r requirements.txt
 
   deploy:
     docker:
