--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ workflows:
   schedule-workflow:
     triggers:
       - schedule:
-          cron: "*,2 * * * *"
+          cron: "* * * * *"
           filters:
             branches:
               only:
