--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,14 @@ workflows:
   schedule-workflow:
     triggers:
       - schedule:
-          cron: "0 * * * *"
+          cron: "2 5 * * *"
           filters:
             branches:
               only:
                 - circle-project-setup
     jobs:
       - lower
+      - upper
 
 
 jobs:
