--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,10 @@ orbs:
 workflows:
   schedule-workflow:
     jobs:
-      - upper
+      - lower
     triggers:
       - schedule:
-          cron: "10 5 * * *"
+          cron: "* * * * *"
           filters:
             branches:
               only:
