--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ workflows:
             branches:
               only:
                 - circle-project-setup
-#     jobs:
-#       - lower
+    jobs:
+      - lower
 #       - upper
 
 
