--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ workflows:
             - build-and-test
       - hold:
           type: approval
+          requires: 
+            - build-and-test         
 
 
 
