--- a/.github/workflow/config.yaml
+++ b/.github/workflow/config.yaml
@@ -1,1 +1,19 @@
+name: Github Actions workflow
 
+
+on:
+  push:
+    branches:
+      - "main"
+  workflow_dispatch:
+  
+
+jobs:
+  deploy-env:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - run: echo "CHANGED_FILES=$(git diff --name-only ${{ github.event.before }}..${{ github.event.after }})" >> $GITHUB_ENV
