--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,34 @@ jobs:
         with:
           fetch-depth: 0
       - run: echo "CHANGED_FILES=$(git diff --name-only ${{ github.event.before }}..${{ github.event.after }})" >> $GITHUB_ENV
+      
+      
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+
+      - name: Install npm
+        run: "sudo apt update -y && sudo apt install nodejs npm -y"
+
+      - name: Install AWS CDK
+        run: "sudo npm install -g aws-cdk@1.139.0"
+
+      - name: Install requirements
+        run: "pip3 install -r requirements.txt"
+
+      - name: CDK Synth
+        run: cdk synth
+
+      - name: CDK Diff
+        run: cdk diff
+        
+        
+      - name: CDk deploy
+        run: cdk deploy --all --require-approval never --profile POC
+       
+      
